@@ -2,8 +2,8 @@ Package: SeqArray
 Type: Package
 Title: Big Data Management of Whole-genome Sequence Variant Calls
 Version: 1.11.15
-Date: 2016-03-09
-Depends: R (>= 2.15.0), gdsfmt (>= 1.7.9)
+Date: 2016-03-12
+Depends: R (>= 2.15.0), gdsfmt (>= 1.7.13)
 Imports: methods, S4Vectors, IRanges, GenomicRanges,
         SummarizedExperiment, Biostrings, VariantAnnotation
 LinkingTo: gdsfmt
