@@ -195,39 +195,19 @@ seqResetFilter <- function(object, sample=TRUE, variant=TRUE, verbose=TRUE)
 # Set a filter according to specified chromosomes
 #
 seqSetFilterChrom <- function(gdsfile, include=NULL, is.num=NA,
-    from.bp=NaN, to.bp=NaN, verbose=TRUE)
+    from.bp=NULL, to.bp=NULL, verbose=TRUE)
 {
     # check
     stopifnot(inherits(gdsfile, "SeqVarGDSClass"))
     stopifnot(is.null(include) | is.numeric(include) | is.character(include))
     stopifnot(is.logical(is.num))
 
-    stopifnot(is.numeric(from.bp) & is.vector(from.bp))
-    stopifnot(length(from.bp) == 1L)
-    stopifnot(is.numeric(to.bp) & is.vector(to.bp))
-    stopifnot(length(to.bp) == 1L)
-
+    stopifnot(is.null(from.bp) | is.numeric(from.bp))
+    stopifnot(is.null(to.bp) | is.numeric(to.bp))
     stopifnot(is.logical(verbose), length(verbose)==1L)
 
-    if (is.finite(from.bp) | is.finite(to.bp))
-    {
-        # call C function
-        .Call(SEQ_SetChrom, gdsfile, include, is.num, FALSE)
-        pos <- seqGetData(gdsfile, "position")
-        if (is.finite(from.bp))
-        {
-            flag <- (pos >= from.bp)
-            if (is.finite(to.bp))
-                flag <- flag & (pos <= to.bp)
-        } else {
-            flag <- (pos <= to.bp)
-        }
-        seqSetFilter(gdsfile, action="intersect", variant.sel=flag,
-            verbose=verbose)
-    } else {
-        # call C function
-        .Call(SEQ_SetChrom, gdsfile, include, is.num, verbose)
-    }
+    # call C function
+    .Call(SEQ_SetChrom, gdsfile, include, is.num, from.bp, to.bp, verbose)
 
     invisible()
 }
