@@ -778,7 +778,7 @@ COREARRAY_DLL_EXPORT SEXP SEQ_Parse_VCF4(SEXP vcf_fn, SEXP header,
 		vector<string> filter_list;
 		{
 			SEXP level = GetListElement(param, "filter.levels");
-			const int n = GetLength(level);
+			const int n = RLength(level);
 			for (int i=0; i < n; i++)
 				filter_list.push_back(CHAR(STRING_ELT(level, i)));
 		}
@@ -826,7 +826,7 @@ COREARRAY_DLL_EXPORT SEXP SEQ_Parse_VCF4(SEXP vcf_fn, SEXP header,
 			SEXP info_flag = GetListElement(info, "import.flag");
 			TVCF_Field_Info val;
 
-			for (size_t i=0; i < GetLength(info_ID); i++)
+			for (size_t i=0; i < RLength(info_ID); i++)
 			{
 				val.name = CHAR(STRING_ELT(info_ID, i));
 				val.type = INTEGER(info_inttype)[i];
@@ -852,7 +852,7 @@ COREARRAY_DLL_EXPORT SEXP SEQ_Parse_VCF4(SEXP vcf_fn, SEXP header,
 			SEXP fmt_flag = GetListElement(fmt, "import.flag");
 			TVCF_Field_Format val;
 
-			for (size_t i=0; i < GetLength(fmt_ID); i++)
+			for (size_t i=0; i < RLength(fmt_ID); i++)
 			{
 				val.name = CHAR(STRING_ELT(fmt_ID, i));
 				val.type = INTEGER(fmt_inttype)[i];
@@ -917,7 +917,7 @@ COREARRAY_DLL_EXPORT SEXP SEQ_Parse_VCF4(SEXP vcf_fn, SEXP header,
 		// chr prefix
 		vector<string> ChrPref;
 		{
-			const R_xlen_t n = GetLength(ChrPrefix);
+			const R_xlen_t n = RLength(ChrPrefix);
 			for (R_xlen_t i=0; i < n; i++)
 				ChrPref.push_back(CHAR(STRING_ELT(ChrPrefix, i)));
 		}
