@@ -36,8 +36,10 @@
 // The Initialized Object
 // ===========================================================
 
-void TInitObject::TSelection::Reset(PdGDSFolder Root)
+void TInitObject::TSelection::Reset()
 {
+	PdGDSFolder Root = FileInfo->Root;
+
 	if (Sample.empty())
 	{
 		PdAbstractArray N = GDS_Node_Path(Root, "sample.id", TRUE);
@@ -56,6 +58,13 @@ void TInitObject::TSelection::Reset(PdGDSFolder Root)
 	}
 }
 
+void TInitObject::TFileInfo::NeedChrom()
+{
+	if (Chrom.Map.empty())
+		Chrom.AddChrom(Root);
+}
+
+
 TInitObject::TInitObject(): GENO_BUFFER(1024)
 {
 	memset(TRUE_ARRAY, TRUE, sizeof(TRUE_ARRAY));
@@ -69,16 +78,14 @@ TInitObject::TSelection &TInitObject::Selection(SEXP gdsfile, bool alloc)
 
 	int id = Rf_asInteger(ID);
 	TFileInfo &info = _Map[id];
+	info.Root = GDS_R_SEXP2FileRoot(gdsfile);
+
 	if (info.SelList.empty())
-		info.SelList.push_back(TSelection());
+		info.SelList.push_back(TSelection(info));
 
 	TSelection &s = info.SelList.back();
 	if (alloc && (s.Sample.empty() | s.Variant.empty()))
-	{
-		// the GDS root node
-		PdGDSFolder Root = GDS_R_SEXP2FileRoot(gdsfile);
-		s.Reset(Root);
-	}
+		s.Reset();
 
 	return s;
 }
@@ -132,7 +139,7 @@ COREARRAY_DLL_LOCAL SEXP GetListElement(SEXP list, const char *str)
 {
 	SEXP elmt = R_NilValue;
 	SEXP names = getAttrib(list, R_NamesSymbol);
-	const size_t n = GetLength(names);
+	const size_t n = RLength(names);
 	for (size_t i = 0; i < n; i++)
 	{
 		if (strcmp(CHAR(STRING_ELT(names, i)), str) == 0)
@@ -261,7 +268,7 @@ COREARRAY_DLL_EXPORT SEXP SEQ_FilterPushEmpty(SEXP gdsfile)
 			Init._Map.find(id);
 		if (it != Init._Map.end())
 		{
-			it->second.SelList.push_back(TInitObject::TSelection());
+			it->second.SelList.push_back(TInitObject::TSelection(it->second));
 		} else
 			throw ErrSeqArray("The GDS file is closed or invalid.");
 	COREARRAY_CATCH
@@ -280,7 +287,7 @@ COREARRAY_DLL_EXPORT SEXP SEQ_FilterPushLast(SEXP gdsfile)
 			if (!it->second.SelList.empty())
 				it->second.SelList.push_back(it->second.SelList.back());
 			else
-				it->second.SelList.push_back(TInitObject::TSelection());
+				it->second.SelList.push_back(TInitObject::TSelection(it->second));
 		} else
 			throw ErrSeqArray("The GDS file is closed or invalid.");
 	COREARRAY_CATCH
@@ -758,62 +765,149 @@ COREARRAY_DLL_EXPORT SEXP SEQ_SetSpaceVariant2(SEXP gdsfile, SEXP var_sel,
 }
 
 
+static bool is_numeric(const string &txt)
+{
+	char *endptr = (char*)(txt.c_str());
+	strtol(txt.c_str(), &endptr, 10);
+	return (endptr != txt.c_str()) && (*endptr == 0);
+}
+
 /// set a working space flag with selected chromosome(s)
 COREARRAY_DLL_EXPORT SEXP SEQ_SetChrom(SEXP gdsfile, SEXP include,
-	SEXP is_num, SEXP verbose)
+	SEXP is_num, SEXP frombp, SEXP tobp, SEXP verbose)
 {
+	int nProtected = 0;
+	int *pFrom=NULL, *pTo=NULL;
+
 	int IsNum = Rf_asLogical(is_num);
-	if (!Rf_isNull(include))
-		include = AS_CHARACTER(include);
+
+	if (Rf_isNull(include))
+	{
+		if (!Rf_isNull(frombp))
+			error("'from.bp' should be NULL.");
+		if (!Rf_isNull(tobp))
+			error("'to.bp' should be NULL.");
+	} else {
+		include = PROTECT(AS_CHARACTER(include));
+		nProtected ++;
+		if (!Rf_isNull(frombp) || !Rf_isNull(tobp))
+		{
+			if (RLength(include) != RLength(frombp))
+				error("'from.bp' should have the same length as 'include'.");
+			if (RLength(include) != RLength(tobp))
+				error("'to.bp' should have the same length as 'include'.");
+			frombp = PROTECT(AS_INTEGER(frombp));
+			tobp = PROTECT(AS_INTEGER(tobp));
+			pFrom = INTEGER(frombp); pTo = INTEGER(tobp);
+			nProtected += 2;
+		}
+	}
 
 	COREARRAY_TRY
 
-		PdGDSFolder Root = GDS_R_SEXP2FileRoot(gdsfile);
-		PdAbstractArray varVariant = GDS_Node_Path(Root, "variant.id", TRUE);
-		int nVariant = GDS_Array_GetTotalCount(varVariant);
+		TInitObject::TSelection &Sel = Init.Selection(gdsfile, true);
+		Sel.FileInfo->NeedChrom();
 
-		PdAbstractArray varChrom = GDS_Node_Path(Root, "chromosome", TRUE);
-		if ((GDS_Array_DimCnt(varChrom) != 1) ||
-				(nVariant != GDS_Array_GetTotalCount(varChrom)))
-			throw ErrSeqArray("Invalid 'chromosome'.");
+		vector<C_BOOL> &array = Sel.Variant;
+		memset(&array[0], FALSE, array.size());
 
-		set<string> Inc;
-		bool IncFlag = (Rf_isNull(include) != TRUE);
-		if (IncFlag)
+		if (Rf_isNull(include))
 		{
-			R_xlen_t n = XLENGTH(include);
-			for (R_xlen_t i=0; i < n; i++)
-				Inc.insert(CHAR(STRING_ELT(include, i)));
-		}
-
-		vector<C_BOOL> &array = Init.Selection(gdsfile).Variant;
-		array.resize(nVariant);
-		string txt;
-		int nSum = 0;
-
-		for (C_Int32 i=0; i < nVariant; i++)
-		{
-			static const C_Int32 ONE = 1;
-			GDS_Array_ReadData(varChrom, &i, &ONE, &txt, svStrUTF8);
-
-			bool flag = true;
-			if (IsNum != NA_INTEGER)
+			// include = NULL
+			if (IsNum == NA_INTEGER)
 			{
-				// whether val is numeric
-				char *endptr = (char*)(txt.c_str());
-				strtol(txt.c_str(), &endptr, 10);
-				flag = (endptr != txt.c_str());
-				if (IsNum == FALSE) flag = !flag;
+				memset(&array[0], TRUE, array.size());
+			} else {
+				CChromIndex &Chrom = Sel.FileInfo->Chrom;
+				map<string, CChromIndex::TRangeList>::iterator it;
+				for (it=Chrom.Map.begin(); it != Chrom.Map.end(); it++)
+				{
+					bool flag = is_numeric(it->first);
+					if (((IsNum==TRUE) && flag) || ((IsNum==FALSE) && !flag))
+					{
+						CChromIndex::TRangeList &rng = it->second;
+						vector<CChromIndex::TRange>::iterator it;
+						for (it=rng.begin(); it != rng.end(); it++)
+						{
+							memset(&array[it->Start], TRUE, it->Length);
+						}
+					}
+				}
 			}
-			if (IncFlag && flag)
-				flag = (Inc.find(txt) != Inc.end());
 
-			array[i] = flag;
-			if (flag) nSum ++;
+		} else {
+			// include != NULL
+			string last(128, '\x0');
+			vector<C_Int32> buffer;
+			PdAbstractArray varPos = NULL;
+			if (pFrom && pTo)
+				varPos = GDS_Node_Path(Sel.FileInfo->Root, "position", TRUE);
+
+			R_xlen_t n = XLENGTH(include);
+			for (R_xlen_t idx=0; idx < n; idx++)
+			{
+				string s = CHAR(STRING_ELT(include, idx));
+
+				if (IsNum == TRUE)
+				{
+					if (!is_numeric(s)) continue;
+				} else if (IsNum == FALSE)
+				{
+					if (is_numeric(s)) continue;
+				}
+
+				CChromIndex &Chrom = Sel.FileInfo->Chrom;
+				map<string, CChromIndex::TRangeList>::iterator it =
+					Chrom.Map.find(s);
+				if (it != Chrom.Map.end())
+				{
+					CChromIndex::TRangeList &rng = it->second;
+
+					// if from.bp and to.bp
+					if (varPos)
+					{
+						int from = pFrom[idx], to = pTo[idx];
+						if (from == NA_INTEGER) from = 0;
+						if (to == NA_INTEGER) to = 2147483647;
+						if (s != last)
+						{
+							buffer.resize(Chrom.RangeTotalLength(rng));
+							Chrom.ReadData(varPos, rng, &buffer[0], svInt32);
+							last = s;
+						}
+
+						int *pos = &buffer[0];
+						vector<CChromIndex::TRange>::iterator it;
+						for (it=rng.begin(); it != rng.end(); it++)
+						{
+							C_BOOL *p = &array[it->Start];
+							for (size_t m=it->Length; m > 0; m--)
+							{
+								if ((from <= *pos) && (*pos <= to))
+									*p = TRUE;
+								p ++; pos ++;
+							}
+						}
+
+					} else {
+						// no from.bp and to.bp
+						vector<CChromIndex::TRange>::iterator it;
+						for (it=rng.begin(); it != rng.end(); it++)
+						{
+							memset(&array[it->Start], TRUE, it->Length);
+						}
+					}
+				}
+			}
 		}
 
 		if (Rf_asLogical(verbose) == TRUE)
-			Rprintf("# of selected variants: %d\n", nSum);
+		{
+			int n = GetNumOfTRUE(&array[0], array.size());
+			Rprintf("# of selected variants: %d\n", n);
+		}
+
+		UNPROTECT(nProtected);
 
 	COREARRAY_CATCH
 }
@@ -1272,7 +1366,7 @@ COREARRAY_DLL_EXPORT void R_init_SeqArray(DllInfo *info)
 
 		CALL(SEQ_SetSpaceSample, 4),        CALL(SEQ_SetSpaceSample2, 4),
 		CALL(SEQ_SetSpaceVariant, 4),       CALL(SEQ_SetSpaceVariant2, 4),
-		CALL(SEQ_SplitSelection, 5),        CALL(SEQ_SetChrom, 4),
+		CALL(SEQ_SplitSelection, 5),        CALL(SEQ_SetChrom, 6),
 		CALL(SEQ_GetSpace, 2),
 
 		CALL(SEQ_Summary, 2),               CALL(SEQ_System, 0),
